Remove secrets from env example

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,8 @@
 PORT=3000
 
 # SendGrid
-SENDGRID_API_KEY=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
+SENDGRID_API_KEY=YOUR_SENDGRID_API_KEY_HERE
+
 
 # From address (the one users will see)
 FROM_EMAIL=vinakaar@gmail.com
