--- a/.env.example
+++ b/.env.example
@@ -13,4 +13,4 @@ PDF_FILENAME=Sample.pdf
 
 # Optional override
 EMAIL_SUBJECT=Your requested PDF from Vinakaar
-EMAIL_TEXT=Thanks for requesting the PDF. Please find it attached.
+EMAIL_TEXT=Thank you for requesting the journal. Please find it attached. You are permitted to print a copy of this journal for personal use only.
